--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -60,6 +60,23 @@
   color: #61dafb;
 }
 
+.sectionHeader{
+  text-align: left;
+  margin-left: 2em;
+}
+.card{
+  background-color: #006494;
+  max-width: 22em;
+  padding:2em;
+  margin: auto;
+  margin-bottom: 1em;
+  border-radius: 1em;
+}
+
+.cardTitle, .subTitle{
+  color: whitesmoke;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
