--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 
+*{ 
+  box-sizing: border-box; 
+  margin: 0; 
+  padding: 0; 
+
+}
 
 .App {
   text-align: center;
@@ -7,18 +13,8 @@
   
 }
 
-.nav-links{
-  list-style: none;
-  color: black;
-  
-}
-
-.nav-links a{
-  color: black;
-}
-
 .topBanner{
-  background-color: #E2EDF7;
+  background-color: hsl(209, 57%, 93%);
   padding: 2em;
 }
 
@@ -86,7 +82,7 @@
   }
 }
 
-@media only screen and {min-width: 400px}{
+@media only screen and (min-width: 400px){
 
   .topBanner{
     display: grid;
@@ -102,12 +98,14 @@
     margin: 2em;
   }
 
+  /*
   .nav-links {
     width: 40%;
     display: flex;
     justify-content: space-around;
     align-items: center;
     list-style: none;
+    color: white;
     
  }
 
@@ -117,8 +115,8 @@
   align-items: center;
   min-height: 10vh;
   background: rgb(73, 79, 82);
-  color: black;
+  color: white;
 }
-
+*/
 }
 
