--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -32,7 +32,9 @@
   opacity: 0.6;
 }
 
-
+.cardLink{
+  text-decoration: none;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -130,6 +132,7 @@
 .card{
   margin: 1em;
 }
+
 
 }
 
