--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -59,6 +59,7 @@
 #homeHeading{
   font-weight: 400;
   font-size: 3em;
+  margin-top: 1em;
   margin-bottom: 0.5em;
 }
 
@@ -116,6 +117,28 @@
   text-transform: uppercase;
   font-weight: bold;
   font-size: 1em;
+}
+
+/* HOME PAGE STYLES */
+
+.homeNav{
+  background-color: rgb(0,0,0,0.5);
+  display: inline-block;
+  width: 100%;
+  padding: 1em 0.5em;
+}
+
+#logo{
+  max-width: 15em;
+  float: left;
+  filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
+}
+
+#homeNavButton{
+  float: right;
+  padding: 0.75em;
+  margin-right: 1em;
+  filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
 }
 
 
