--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -146,6 +146,35 @@
   filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
 }
 
+/* profile page styles */
+
+.classCard{
+  display: inline;
+  background-color: #006494;
+  margin: 0.75em 2em;
+  padding: 1.5em;
+  max-width: 30em;
+  border-radius: 1em;
+  filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
+}
+
+.courseTitle{
+  color: #f5f5f5;
+  width: 50%;
+  display: inline-flex;
+}
+
+.classInfo{
+  width: 50%;
+  float: right;
+}
+
+.classInfo .subTitle{
+  color:#f5f5f5;
+  text-align: right;
+  font-weight: bold;
+  font-style: italic;
+}
 
 @keyframes App-logo-spin {
   from {
@@ -213,6 +242,23 @@
   grid-column: 2/3;
 }
 
+.profileBody{
+  display: grid;
+  grid-template-columns: 40% 60%;
+}
+
+.classes{
+  grid-column: 1/2;
+}
+
+.groups{
+  grid-column: 2 / 3;
+  margin-left: 1em;
+}
+
+.friends{
+  grid-column: 1/2;
+}
 
 
 
