--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,6 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 
 
+/*
+//////////////////////////////////////
+///// ----- GLOBAL STYLES ----- /////
+////////////////////////////////////
+*/
+
 *{ 
 
   box-sizing: border-box; 
@@ -14,57 +20,9 @@
   letter-spacing: .05em;
 }
 
-
-.topBanner{
-  background-color: hsl(209, 57%, 93%);
-  padding: 2em;
-}
-
-#greeting{
-  margin: 1em 0 1em 0;
-}
-#studyTip{
-  text-align: left;
-  max-width: 35em;
-
-}
-
-#didYouKnow{
-  text-align: left;
-  text-transform: uppercase;
-  opacity: 0.6;
-  margin: 1em 0 1em 0;
-}
-
-.cardLink{
-  text-decoration: none;
-}
-
 .App-logo {
   height: 40vmin;
   pointer-events: none;
-}
-
-.profileBanner h2{
-  color:white;
-}
-
-.profileBanner h4{
-  color: white;
-  font-style: italic;
-  line-height: 150%;
-  
-}
-
-#homeHeading{
-  font-weight: 400;
-  font-size: 3em;
-  margin-top: 1em;
-  margin-bottom: 0.5em;
-}
-
-#homeBlurb{
-  margin-bottom: 1em;
 }
 
 .App-header {
@@ -75,37 +33,62 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: #f5f5f5;
 }
 
 .App-link {
   color: #61dafb;
 }
 
+.cardLink{
+  /* removes blue color and underline for links in the cards */
+  text-decoration: none;
+  color: #f5f5f5;
+}
+
 .sectionHeader{
   text-align: left;
   margin: 1em 0 1em 1em;
-
 }
 
-.bannerBlurb{
-  margin: 1em;
+/* create-react-app defaults -- I actually don't know what these do */
+
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
 }
 
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+
+/* !!!!!! DEPRECATE CARD CLASS WHEN GROUP CARDS AND RESOURCE CARDS ARE PROPERLY CONFIGURED !!!!!! */
 .card{
   background-color: #006494;
   padding:3em;
   margin: 0 1em 0 1em;
   border-radius: 1em;
   filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
-  height: 100%;
+
 }
 
 .cardTitle, .subTitle{
-  color: whitesmoke;
+  color: #f5f5f5;
 }
 
-.callToAction{
+/*
+//////////////////////////////////////
+///// ----- BUTTON STYLES ----- /////
+////////////////////////////////////
+*/
+
+.mainCTA{
   display: inline-block;
   max-width: 25em;
   margin-top: 1em;
@@ -116,18 +99,22 @@
   
 }
 
-.callToAction:hover{
+.mainCTA:hover{
   background-color: #C37EB8;
 
 }
 
-.callToAction h3{
+.mainCTA h3{
   text-transform: uppercase;
   font-weight: bold;
   font-size: 1em;
 }
 
-/* HOME PAGE STYLES */
+/*
+//////////////////////////////////////
+//// ----- HOMEPAGE STYLES ----- ////
+////////////////////////////////////
+*/
 
 .homeNav{
   background-color: rgb(0,0,0,0.5);
@@ -148,12 +135,83 @@
   filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
 }
 
-/* profile page styles */
+/*
+//////////////////////////////////////
+//// ----- DASHBOARD STYLES ----- ///
+////////////////////////////////////
+*/
+
+.topBanner{
+  background-color: hsl(209, 57%, 93%);
+  padding: 2em;
+}
+
+.heroImg{
+  margin:auto;
+  width: 75%;
+}
+#greeting{
+  margin: 1em 0 1em 0;
+}
+
+#studyTip{
+  text-align: left;
+  max-width: 35em;
+
+}
+
+#didYouKnow{
+  text-align: left;
+  text-transform: uppercase;
+  opacity: 0.6;
+  margin: 1em 0 1em 0;
+}
+
+
+.profileBanner h2{
+  color:#f5f5f5;
+}
+
+.profileBanner h4{
+  color: #f5f5f5;
+  font-style: italic;
+  line-height: 150%;
+  
+}
+
+#homeHeading{
+  font-weight: 400;
+  font-size: 3em;
+  margin-top: 1em;
+  margin-bottom: 0.5em;
+}
+
+#homeBlurb{
+  margin-bottom: 1em;
+}
+
+
+.bannerBlurb{
+  margin: 1em;
+}
+
+/*
+//////////////////////////////////////
+// ----- PROFILE PAGE STYLES ----- //
+////////////////////////////////////
+*/
+
+/*
+//////////////////////////////////////
+////// ----- CARD STYLES ----- //////
+////////////////////////////////////
+*/
+
+/* I. Class Cards for Schedules */
 
 .classCard{
   background-color: #006494;
   padding: 1.5em;
-  margin: 0 1em;
   border-radius: 1em;
   filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
 }
@@ -176,26 +234,44 @@
   font-style: italic;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/* II. Friend Cards */
+
+.friendCard{
+  background-color: #006494;
+  padding: 1.5em;
+  margin: 0 1em;
+  border-radius: 1em;
+  filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
+  
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.profilePhoto{
+  background-color: #f5f5f5;
+  border-radius: 50%;
+  height: 50px;
+  width: 50px;
 }
+
+.friendInfo{
+  margin-left: 1em;
+  display: inline;
+  float: right;
+}
+
+
+/*
+//////////////////////////////////////
+/// MEDIA QUERIES FOR BIG SCREENS ///
+////////////////////////////////////
+*/
+
 
 @media only screen and (min-width: 600px){
 
   .topBanner{
     display: grid;
-    row-template-columns: 40% 60%;
+    grid-template-columns: 40% 60%;
+    grid-gap: 1em;
   }
 
   .mainPageTitle{
@@ -207,6 +283,15 @@
     
   }
 
+  .heroImg{
+    grid-column: 1 / 2;
+    width: 70%;
+    margin: auto;
+  }
+
+  .bannerBlurb{
+    grid-column: 2/3;
+  }
 .sectionHeader{
   width: 100%;
 }
@@ -227,22 +312,42 @@
 
 .profileBody{
   display: grid;
-  grid-template-columns: 40% 60%;
+  grid-template-columns: 30% 70%;
+  grid-template-rows: 50% 50%;
+  grid-gap: 1em;
+  margin: 0 1em;
 }
 
 .classes{
   grid-column: 1/2;
+  grid-row: 1/3;
+  overflow-y: scroll;
+  overflow-x: hidden;
 }
 
 .groups{
   grid-column: 2 / 3;
-  margin-left: 1em;
+
 }
 
 .friends{
+  margin-left: 1em;
+  grid-column: 2 / 3;
+}
+
+.friendCard{
+  display: grid;
+  grid-template-columns: 30% 70%;
+  justify-content: flex-start;
+}
+.profilePhoto{
   grid-column: 1/2;
 }
 
+.friendInfo{
+  grid-column: 2/3;
+
+}
 
 
 }
