--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -75,6 +75,7 @@
   margin: 0 1em 0 1em;
   border-radius: 1em;
   filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
+  height: 100%;
 
 }
 
@@ -254,8 +255,6 @@
 
 .friendInfo{
   margin-left: 1em;
-  display: inline;
-  float: right;
 }
 
 
@@ -339,9 +338,10 @@
   display: grid;
   grid-template-columns: 30% 70%;
   justify-content: flex-start;
+  height: 100%;
 }
 .profilePhoto{
-  grid-column: 1/2;
+  margin:auto;
 }
 
 .friendInfo{
