--- a/frontend/src/components/Navbar/Sidebar/Sidebar.css
+++ b/frontend/src/components/Navbar/Sidebar/Sidebar.css
@@ -7,26 +7,30 @@
 }
 
 .menu-bars{ 
+    display: none;
+} 
+
+.menu-close{ 
     margin-left: 2rem; 
     font-size: 2rem; 
-    background: none; 
 }
 
 .nav-menu{ 
     background-color: #006494;
     width: 250px; 
     height: 100vh; 
-    display: flex; 
+    display: flex-end; 
     justify-content: center;
     position: fixed; 
     top: 0; 
-    left: -100%; 
+    right: -100%; 
     transition: 850ms; 
 }
 
 .nav-menu.active{ 
-    left: 0; 
+    right: 0; 
     transition: 350ms; 
+    z-index: 10;
 }
 
 .nav-text{ 
@@ -65,4 +69,16 @@
     display: flex; 
     justify-content: start;
     align-items: center;
+}
+
+@media screen and (max-width: 760px) { 
+    .menu-bars{ 
+        display: block; 
+        position: absolute; 
+        top: 0; 
+        right: 0; 
+        transform: translate(-100%, 75%); 
+        font-size: 1.8rem; 
+        cursor: pointer; 
+    }
 }
