--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -79,6 +79,7 @@
 
 }
 
+
 .cardTitle, .subTitle{
   color: #f5f5f5;
 }
@@ -133,6 +134,29 @@
 
 .standardButton:hover h3{
   color: #f5f5f5;
+}
+
+.addFriend h3{
+  font-weight: bold;
+  float: right;
+  text-transform: uppercase;
+  font-size: 1em;
+  color: #f5f5f5;
+  position: relative;
+  height: 50%;
+}
+
+.addFriend{
+  width: 12em;
+  margin: 1em;
+  padding: 0.5em 1.25em;
+  border: 3px solid #f5f5f5;
+  border-radius: 5em;
+  transition: 0.3s;
+}
+
+.buttonIcon{
+  color:#f5f5f5;
 }
 
 
@@ -193,6 +217,9 @@
   margin: 1em 0 1em 0;
 }
 
+.profileBanner{
+  text-align: center;
+}
 
 .profileBanner h2{
   color:#f5f5f5;
@@ -226,6 +253,15 @@
 // ----- PROFILE PAGE STYLES ----- //
 ////////////////////////////////////
 */
+
+
+.bio{
+  color: #f5f5f5;
+  max-width: 30em;
+  margin: 1em 0;
+}
+
+
 
 /*
 //////////////////////////////////////
@@ -354,8 +390,7 @@
 .classes{
   grid-column: 1/2;
   grid-row: 1/3;
-  overflow-y: scroll;
-  overflow-x: hidden;
+
 }
 
 .groups{
@@ -380,6 +415,22 @@
 
 .friendInfo{
   grid-column: 2/3;
+
+}
+
+/* profile banner styling */
+.profileBanner{
+  display: grid;
+  grid-template-columns: 1fr 3fr;
+  max-width: 60%;
+  margin: auto;
+}
+
+.userInfo{
+  grid-column: 2/3;
+  text-align: left;
+  padding: 1em;
+  margin: 0 1em;
 
 }
 
