--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -275,6 +275,7 @@
   background-color: #006494;
   padding: 1.5em;
   border-radius: 1em;
+  margin: 0 1em;
   filter: drop-shadow(0 0 0.75rem rgb(0,0,0,0.3));
 }
 
@@ -419,6 +420,7 @@
 }
 
 /* profile banner styling */
+
 .profileBanner{
   display: grid;
   grid-template-columns: 1fr 3fr;
@@ -434,6 +436,9 @@
 
 }
 
+.scheduleMatch{
+  grid-column: 2/3;
+}
 
 }
 
